--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,6 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -29,13 +25,25 @@
     <link rel="manifest" href="/manifest.webmanifest"/><meta name="theme-color" content="#663399"/>
   
 
-    <title>COVID 19 India Dashboard</title>
+    <title>COVID-19 | India Dashboard</title>
     <meta charset="utf-8">
     <meta content="ie=edge" http-equiv="x-ua-compatible">
-    <meta content="template language" name="keywords">
-    <meta content="Tamerlan Soziev" name="author">
-    <meta content="Admin dashboard html template" name="description">
+    <meta content="covid19, coronavirus, india, cases, coroana, outbreak, statistics, stats" name="keywords">
+    <meta content="VectorX" name="author">
+    <meta content="Statewise Statistics of Coronavirus Cases in India" name="description">
     <meta content="width=device-width, initial-scale=1" name="viewport">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://curecovid19.in">
+    <meta property="og:title" content="COVID-19 | India Dashboard">
+    <meta property="og:description" content="Statewise Statistics of Coronavirus Cases in India">
+    <meta property="og:image" content="/thumbnail.png">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://curecovid19.in">
+    <meta property="twitter:title" content="COVID-19 | India Dashboard">
+    <meta property="twitter:description" content="Statewise Statistics of Coronavirus Cases in India">
+    <meta property="twitter:image" content="/thumbnail.png">
+
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
     <link href="bower_components/select2/dist/css/select2.min.css" rel="stylesheet">
     <link href="bower_components/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
