adding tabs and header styles

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
     <script src="bower_components/bootstrap/js/dist/util.js"></script>
-    <script src="bower_components/bootstrap/js/dist/tab.js"></script>
+    <!-- <script src="bower_components/bootstrap/js/dist/tab.js"></script> -->
         
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-app.js"></script>
