--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Inter:400,700&display=swap" rel="stylesheet">
     <link href="css/main.css?version=4.7.0" rel="stylesheet">
-    <link href="icon_fonts_assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/fontawesome.min.js" rel="stylesheet">
   </head>
   <body class="menu-position-top full-screen with-content-panel">
     
@@ -42,7 +42,7 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
          https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-analytics.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
     <script>
       // Your web app's Firebase configuration
       var firebaseConfig = {
