adding telephonic guidance

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Inter:400,700&display=swap" rel="stylesheet">
     <link href="css/main.css?version=4.7.0" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/fontawesome.min.js" rel="stylesheet">
+    <!-- <link href="icon_fonts_assets/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
   </head>
   <body class="menu-position-top full-screen with-content-panel">
     
