og image change

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/curecovid19-thumbnail.jpg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link rel="manifest" href="/manifest.webmanifest"/><meta name="theme-color" content="#663399"/>
@@ -22,12 +22,12 @@
     <meta property="og:url" content="https://curecovid19.in" data-react-helmet="true" />
     <meta property="og:title" content="COVID-19 | India Dashboard" data-react-helmet="true" />
     <meta property="og:description" content="Statewise Statistics of Coronavirus Cases in India" data-react-helmet="true" />
-    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" data-react-helmet="true" />
+    <meta property="og:image" content="%PUBLIC_URL%/curecovid19-thumbnail.jpg" data-react-helmet="true" />
     <meta property="twitter:card" content="summary_large_image" data-react-helmet="true" />
     <meta property="twitter:url" content="https://curecovid19.in" data-react-helmet="true" />
     <meta property="twitter:title" content="COVID-19 | India Dashboard" data-react-helmet="true" />
     <meta property="twitter:description" content="Statewise Statistics of Coronavirus Cases in India" data-react-helmet="true" />
-    <meta property="twitter:image" content="%PUBLIC_URL%/logo512.png" data-react-helmet="true" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/curecovid19-thumbnail.jpg" data-react-helmet="true" />
 
     <link href="https://fonts.googleapis.com/css?family=Inter:400,700&display=swap" rel="stylesheet">
     <link href="css/main.css?version=4.8.0" rel="stylesheet">
