--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,9 @@
     <link href="css/main.css?version=4.8.0" rel="stylesheet">
     <link href="icon_fonts_assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
+    
+    <meta property="twitter:keywords" content="coronavirus,corona,covid,covid19,covid-19,covidindia,india,virus" />
+
   </head>
   <body class="menu-position-top full-screen with-content-panel">
     
