adding backgorund color to maintenance pages

--- a/public/404.html
+++ b/public/404.html
@@ -63,19 +63,21 @@
       a.kopimi,a.kopimi img.kopimi{display:block;margin-left:auto;margin-right:auto}
       a.kopimi img.kopimi{height:2em}p.fakepre{font-family:monospace;font-size:.9em}
 
-      body{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
       html{
+        background-color: #0074d9;
         display: flex;
         align-items: center;
         justify-content: center;
         height: 100vh;
       }
 
+      body{
+        color: #fefefe;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      
       .error-middle{
         display: block;
         vertical-align: middle;
